WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249431
[IFC][Integration] RenderBox should not call first/lastLineBox on RenderInline
https://bugs.webkit.org/show_bug.cgi?id=249431
Summary
[IFC][Integration] RenderBox should not call first/lastLineBox on RenderInline
alan
Reported
2022-12-15 14:45:51 PST
use the iterator interface instead.
Attachments
[fast-cq]Patch
(5.60 KB, patch)
2022-12-15 14:48 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-12-15 14:48:09 PST
Created
attachment 464063
[details]
[fast-cq]Patch
Antti Koivisto
Comment 2
2022-12-16 08:02:38 PST
Comment on
attachment 464063
[details]
[fast-cq]Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=464063&action=review
> Source/WebCore/rendering/RenderBox.cpp:3946 > + auto inlineBox = firstInlineBox; > + for (; inlineBox->nextInlineBox(); inlineBox.traverseNextInlineBox()) { } > + return inlineBox;
Should add lastInlineBoxFor at some point
EWS
Comment 3
2022-12-16 08:42:23 PST
Committed
257992@main
(cf7c7c33a97c): <
https://commits.webkit.org/257992@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464063
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-12-16 08:43:18 PST
<
rdar://problem/103448489
>
alan
Comment 5
2022-12-16 08:50:11 PST
(In reply to Antti Koivisto from
comment #2
)
> Comment on
attachment 464063
[details]
> [fast-cq]Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=464063&action=review
> > > Source/WebCore/rendering/RenderBox.cpp:3946 > > + auto inlineBox = firstInlineBox; > > + for (; inlineBox->nextInlineBox(); inlineBox.traverseNextInlineBox()) { } > > + return inlineBox; > > Should add lastInlineBoxFor at some point
totally
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug