[IFC][Integration] RenderBox should not call first/lastLineBox on RenderInline https://bugs.webkit.org/show_bug.cgi?id=249431

Reviewed by Antti Koivisto.

Use the InlineIterator interface to query inline box geometry.
This patch is also in preparation for adding RTL out-of-flow support for IFC.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::positionWithRTLInlineBoxContainingBlock):
(WebCore::RenderBox::computePositionedLogicalWidthUsing const):
(WebCore::RenderBox::computePositionedLogicalWidthReplaced const):

Canonical link: https://commits.webkit.org/257992@main